src/styles/index.less
@import "colors.less";

.path_text {
  color: cadetblue;
}

.copy_icon {
  margin-right: 10px;
  cursor: pointer;
}

.go_to_file_icon {
  margin-left: 10px;
  cursor: pointer;
}

.inner_path_text {
  overflow-wrap: break-word;
  white-space: normal;
  color: #a7a6a6;
}
// code modal
pre {
  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
  background: url(../../static/imgs/blueprint.png) #f6f6f6;
  border-radius: 10px;
  text-shadow: 0 1px white;
}
// table
.row_fail {
  background: @failColor;
  &:hover td {
    background: @failColor_hover !important;
  }
  .path_text {
    color: @failTextColor;
  }
  .inner_path_text {
    color: @failTextColor;
  }
  .time_box {
    color: @failTextColor;
    span {
      color: @failTextColor;
    }
  }
}
.row_pass_odd {
  background: @passOddColor;
  &:hover td {
    background: @passColor_hover !important;
  }
}
.row_pass_even {
  background: @passEvenColor;
  &:hover td {
    background: @passColor_hover !important;
  }
}
.row_pending {
  background: @pending;
  &:hover td {
    background: @pending_hover !important;
  }
}

.row_todo {
  background: @todo;
  &:hover td {
    background: @todo_hover !important;
  }
  .path_text {
    color: @failTextColor;
  }
  .inner_path_text {
    color: @failTextColor;
  }
  .time_box {
    color: @failTextColor;
    span {
      color: @failTextColor;
    }
  }
}

.mian_table_tags {
  text-align: center;
  .ant-tag {
    width: 40px;
    text-align: center;
    padding: 1px;
    margin-right: 2px;
    box-shadow: 0px 1px 1px 0px #eee;
  }
  .one_tag {
    width: 120px;
    span {
      display: inline-block;
      font-weight: 500;
      text-align: left;
      padding-left: 8px;
    }
    i {
      margin-left: 5px;
    }
  }
}
// home title
.area_subject {
  font-size: 24px;
  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI",
    "Helvetica Neue", Arial, sans-serif;
  font-weight: 300;
  color: @titleTextColor;
  line-height: 3rem;
  margin: 20px 0;
  i {
    color: #9aa0ac;
    margin-right: 20px;
  }
}
.expand_box {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  .expand_title {
    font-size: 16px;
    .text {
      margin-right: 10px;
    }
  }
}
// detail table
.ant-table-expanded-row {
  &:hover > td {
    background: #fff !important;
  }
  > td {
    table {
      padding: 0px !important;
    }
  }
}
.detail_status_text {
  text-transform: capitalize;
  font-size: 0.8em;
  margin-left: 1em;
}

.merge-box {
  margin: -4px 10px 3px 10px;
  border-radius: 3px;
  padding: 0px 10px;
  background: #dcf5d7;
}

.error_button {
  background: tomato;
  cursor: pointer;
  color: @failTextColor;
  display: flex;
  align-items: center;
  justify-content: center;
  & > span {
    margin-right: 10px;
  }
  border: 2px groove white;
  border-radius: 10%;
  box-shadow: 1px -1px @failTextColor inset;
  &:hover {
    color: bisque;
  }
}

